[tool.poetry]
name = "applied-generative-ai-techtalks"
version = "0.1.0"
description = ""
authors = ["Marc Svensson <marc.svensson@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
tensorflow = "2.17"
matplotlib = "^3.9.1.post1"
imageio = "^2.34.2"
pillow = "^10.4.0"
tensorflow-datasets = "^4.9.6"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"